--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>2025 Movies Hub</h1>
         <nav>
             <ul>
-                <li><a href="#Movie">Movie</a></li>
+                <li><a href="movie.html">Movie</a></li>
                 <li><a href="#Genre">Genre</a></li>
                 <li><a href="#Upcoming Release">Upcoming Release</a></li>
                 <li><a href="#BoxOffice">BoxOffice</a></li>
