testing trending movies api

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </header>
 
     <main>
+        <h2> Trending Movies</h2>
+        <div id="trending-movies"></div>
+        
         <section id="home">
             <h2>Welcome to my Movie reviews for 2025 in the US</h2>
             <p>Here I will try to have reviews, box office results, news, and information</p>
