--- a/boxoffice.html
+++ b/boxoffice.html
@@ -3,16 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Domestic Box Office For 2025</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 40px; background: #f8f9fa; }
-    h1, h2 { margin-bottom: 0.5em; }
-    .subtitle { color: #555; margin-bottom: 1em; }
-    table { width: 100%; border-collapse: collapse; background: #fff; }
-    th, td { padding: 8px 12px; border: 1px solid #ddd; text-align: left; }
-    th { background: #e9ecef; }
-    tr:nth-child(even) { background: #f2f2f2; }
-    .key { font-size: 0.95em; color: #888; margin-bottom: 1em; }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Domestic Box Office For 2025</h1>
